force-app/main/default/objects/TIPWebData__c/TIPWebData__c.object-meta.xml
<CustomObject>
    <label>TIPWebData</label>
    <nameField>
        <label>TIPWebData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TIPWebData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>