force-app/main/default/objects/TIPWebData__c/fields/Brand_Description__c.field-meta.xml
<CustomField>
    <fullName>Brand_Description__c</fullName>
    <label>Brand Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>