force-app/main/default/objects/TIPWebData__c/fields/Item_UPC__c.field-meta.xml
<CustomField>
    <fullName>Item_UPC__c</fullName>
    <label>Item UPC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>