force-app/main/default/objects/TIPWebData__c/fields/MerchandiseCategory__c.field-meta.xml
<CustomField>
    <fullName>MerchandiseCategory__c</fullName>
    <label>MerchandiseCategory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>